# dms-pdfmaker

./: .dockerignore  .~lock.Reference doc-SEED Proposal.docx#  .~lock.Seed Money project format 2025.docx#  .~mplate.docx  Cargo.toml  Dockerfile  README.md  Reference doc-SEED Proposal.docx  Seed Money project format 2025.docx  compile.yml  dms.docx  dms_DSAI2025-CS-1007.docx  docker-compose.yml  input.json  mock_submission.json  output.txt  temp_20250401151334.docx
src/: lib.rs  main.rs  models.rs
src/page1/: mod.rs
src/page2/: mod.rs
src/utils/: mod.rs
